acmeair/routes-atsocpd1/acmeair-authservice-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: acmeair-auth-route
spec:
  host: acmeair-rhacm.apps.atsocpd1.dmz
  path: /auth
  to:
    kind: Service
    name: acmeair-auth-service
