acmeair/routes-atsocpd1/acmeair-customerservice-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: acmeair-customer-route
spec:
  host: acmeair-rhacm.apps.atsocpd1.dmz
  path: /customer
  to:
    kind: Service
    name: acmeair-customer-service
