acmeair/routes-atsocpd1/acmeair-mainservice-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: acmeair-main-route
spec:
  host: acmeair.apps.atsocpd1.dmz
  path: /acmeair
  to:
    kind: Service
    name: acmeair-main-service
